# pythia

./: .coverage  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1363d9310174_init_schema.py  2991485999c2_add_conversation_title.py  37244ef8a920_add_auth_and_chat_models.py  e0f8edb6d04e_add_session_audit.py  f6e0a2fabd0a_add_auth_chat_tables.py
app/: main.py
app/core/: audit.py  config.py  db.py  decorators.py  dependencies.py  exceptions.py  health.py  logging_config.py  middlewares.py  request_context.py
app/core/auth/: models.py
app/ingest/: chunking.py  extractors.py  fetcher.py  models.py  net_guard.py  router.py  schemas.py  service.py
app/llm/: anthropic_adapter.py  guardrails.py  llm_client.py  ollama_adapter.py  openai_adapter.py  registry.py  router.py
app/mcp/: protocol.py  registry.py  router.py  tools.py
app/retrieval/: embedder.py  exceptions.py  models.py  router.py  schemas.py  services.py
scripts/: eval.py  seed.py
tests/: conftest.py  test_conversations.py  test_decorators.py  test_endpoints.py  test_extra_coverage.py  test_extractors_chunking.py  test_guardrails.py  test_ingest.py  test_llm_router.py  test_mcp.py  test_net_guard.py  test_registry.py  test_services_extra.py
