[project]
name = "pythia"
version = "0.1.0"
description = "RAG API — chat with your documents, grounded answers with citations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.112.0",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "fastapi[standard]>=0.136.3",
    "fastembed>=0.4.2",
    "greenlet>=3.5.2",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "openai>=2.44.0",
    "pgvector>=0.4.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.14.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pip-audit>=2.10.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
]


[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear (likely bugs)
    "S",      # flake8-bandit (security)
    "ASYNC",  # async pitfalls
    "RUF",    # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts are the point of tests

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic"]

[[tool.mypy.overrides]]
module = ["fastembed", "fastembed.*"]   # no type stubs shipped
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
# coverage floor — CI fails below this. Currently ~81%; the floor is your minimum.
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
